# testrepository

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
src/testrepository/: TestClass.py  __init__.py
