[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name        = 'testrepository'
dynamic     = ["version"]
description = 'Version 1 the test repository'
readme      = "README.md"
license     = {text = 'GNU AFFERO GENERAL PUBLIC LICENSE'}
authors     = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
keywords    = ['pyut', 'external model', 'python',]

classifiers = [
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    'PyGithub>=2.5.0',
    'click>=8.1.6',
    'codeallybasic>=1.9.0',
]

[project.optional-dependencies]
test = [
    "html-testRunner==1.2.1",
    "mypy==1.10.0",
    "buildlackey==1.8.0",
]

deploy = [
    "wheel==0.45.0",
    "setuptools==70.1.1",
    "twine==6.0.1",
    "build==1.2.2",
]

[project.urls]
Repository = 'https://github.com/hasii2011/pyutmodelv2'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
pyutmodel = ['py.typed']

[tool.setuptools.dynamic]
version = {attr = 'testrepository.__version__'}
